{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 529,
  "lineage": "eb838d1f-97fe-600c-6cb5-cb1a828e7c82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051442e2fbc94ece3",
            "domain": "vpc",
            "id": "eipalloc-051442e2fbc94ece3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-15-237.compute-1.amazonaws.com",
            "public_ip": "3.209.15.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:internet-gateway/igw-0f9672f307d1d85a1",
            "id": "igw-0f9672f307d1d85a1",
            "owner_id": "324997758306",
            "tags": {
              "Name": "nti-GW"
            },
            "tags_all": {
              "Name": "nti-GW"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/web-lb/310b21a80e71bbc0",
            "arn_suffix": "app/web-lb/310b21a80e71bbc0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-1290603427.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/web-lb/310b21a80e71bbc0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d4fb3df5bb1bed7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0046eecfe3121d668"
              },
              {
                "subnet_id": "subnet-01d78cf2a7d367539"
              },
              {
                "subnet_id": "subnet-051d5772ae898b823"
              }
            ],
            "subnets": [
              "subnet-0046eecfe3121d668",
              "subnet-01d78cf2a7d367539",
              "subnet-051d5772ae898b823"
            ],
            "vpc_id": "vpc-0fa5c2ced0bbda19e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_subnet.public-subnet3",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/web-lb/310b21a80e71bbc0/fc36fca805181c68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/web-tg/55e3ec0a113c2594",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/web-lb/310b21a80e71bbc0/fc36fca805181c68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/web-lb/310b21a80e71bbc0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-lb",
            "aws_lb_target_group.web-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.public-subnet1",
            "aws_subnet.public-subnet2",
            "aws_subnet.public-subnet3",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/web-tg/55e3ec0a113c2594",
            "arn_suffix": "targetgroup/web-tg/55e3ec0a113c2594",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/web-tg/55e3ec0a113c2594",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051442e2fbc94ece3",
            "association_id": "eipassoc-0d6fba584ec30daa8",
            "connectivity_type": "public",
            "id": "nat-092e5180203ca5daa",
            "network_interface_id": "eni-061776c6fce20918c",
            "private_ip": "10.0.4.28",
            "public_ip": "3.209.15.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051d5772ae898b823",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet1",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f9672f307d1d85a1",
            "id": "r-rtb-092f89d3453f352a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092f89d3453f352a5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b024e78f3cbd51b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-092e5180203ca5daa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b024e78f3cbd51b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:route-table/rtb-0b024e78f3cbd51b8",
            "id": "rtb-0b024e78f3cbd51b8",
            "owner_id": "324997758306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:route-table/rtb-092f89d3453f352a5",
            "id": "rtb-092f89d3453f352a5",
            "owner_id": "324997758306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01579c228758102db",
            "route_table_id": "rtb-0b024e78f3cbd51b8",
            "subnet_id": "subnet-0b668fe8ddd1ea791"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet1",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet2-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aca8d22f4a0958c",
            "route_table_id": "rtb-0b024e78f3cbd51b8",
            "subnet_id": "subnet-04c4f249a333c35e6"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet2",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnet3-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0631360e8e8d1fc09",
            "route_table_id": "rtb-0b024e78f3cbd51b8",
            "subnet_id": "subnet-00c8e33fbcc45d50e"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet3",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0345f297e2679f6a9",
            "route_table_id": "rtb-092f89d3453f352a5",
            "subnet_id": "subnet-051d5772ae898b823"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet1",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f71772155545e66e",
            "route_table_id": "rtb-092f89d3453f352a5",
            "subnet_id": "subnet-01d78cf2a7d367539"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet2",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-ass3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0285e9e30eb02c092",
            "route_table_id": "rtb-092f89d3453f352a5",
            "subnet_id": "subnet-0046eecfe3121d668"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet3",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group/sg-05d4fb3df5bb1bed7",
            "description": "Allow http inbound traffic ",
            "egress": [],
            "id": "sg-05d4fb3df5bb1bed7",
            "ingress": [],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "324997758306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group/sg-01534e10b9f802805",
            "description": "Allow http inbound traffic ",
            "egress": [],
            "id": "sg-01534e10b9f802805",
            "ingress": [],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "324997758306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-0b668fe8ddd1ea791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b668fe8ddd1ea791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-04c4f249a333c35e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4f249a333c35e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-00c8e33fbcc45d50e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c8e33fbcc45d50e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-051d5772ae898b823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d5772ae898b823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-01d78cf2a7d367539",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d78cf2a7d367539",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-0046eecfe3121d668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0046eecfe3121d668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fa5c2ced0bbda19e"
          },
          "dependencies": [
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-NTI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:vpc/vpc-0fa5c2ced0bbda19e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032d09172f7f1722c",
            "default_route_table_id": "rtb-089beb0bf60a3c63e",
            "default_security_group_id": "sg-0a2533ba7427e5870",
            "dhcp_options_id": "dopt-0a37f75e4bdb0e358",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa5c2ced0bbda19e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-089beb0bf60a3c63e",
            "owner_id": "324997758306",
            "tags": {
              "Name": "VPC-NTI"
            },
            "tags_all": {
              "Name": "VPC-NTI"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0df719d0808a17b82",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0df719d0808a17b82",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01534e10b9f802805",
            "security_group_rule_id": "sgr-0df719d0808a17b82",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb-allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0af9328ba0a2e1fca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0af9328ba0a2e1fca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d4fb3df5bb1bed7",
            "security_group_rule_id": "sgr-0af9328ba0a2e1fca",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-04de0db8846567600",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04de0db8846567600",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01534e10b9f802805",
            "security_group_rule_id": "sgr-04de0db8846567600",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-02ec48087087cd2a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02ec48087087cd2a9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01534e10b9f802805",
            "security_group_rule_id": "sgr-02ec48087087cd2a9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ping_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0d6f4057fe2a3db3e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0d6f4057fe2a3db3e",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01534e10b9f802805",
            "security_group_rule_id": "sgr-0d6f4057fe2a3db3e",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0685b307f1ff2c1ee",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0685b307f1ff2c1ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01534e10b9f802805",
            "security_group_rule_id": "sgr-0685b307f1ff2c1ee",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb-allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0b487f81b7a65fcf0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b487f81b7a65fcf0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d4fb3df5bb1bed7",
            "security_group_rule_id": "sgr-0b487f81b7a65fcf0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.VPC-NTI"
          ]
        }
      ]
    }
  ]
}